[gd_scene load_steps=19 format=2]

[ext_resource path="res://level3res/Mundo3.gd" type="Script" id=1]
[ext_resource path="res://sprites/backgrounds/simple_daytime.png" type="Texture" id=2]
[ext_resource path="res://cannon_cart.tscn" type="PackedScene" id=3]
[ext_resource path="res://pipe.tscn" type="PackedScene" id=4]
[ext_resource path="res://floor.tscn" type="PackedScene" id=5]
[ext_resource path="res://level3res/trash_trays.gd" type="Script" id=6]
[ext_resource path="res://sprites/wood/h_wood_plank_2.png" type="Texture" id=7]
[ext_resource path="res://fonts/montserrat_24.tres" type="DynamicFont" id=8]
[ext_resource path="res://level3res/tray_2.gd" type="Script" id=9]
[ext_resource path="res://sprites/wood/h_wood_plank_1.png" type="Texture" id=10]
[ext_resource path="res://sprites/speech_bubble/speech_bubble.png" type="Texture" id=11]
[ext_resource path="res://level3res/speech_bubble.gd" type="Script" id=12]
[ext_resource path="res://Tools/MouseSpawner.tscn" type="PackedScene" id=13]
[ext_resource path="res://level_cleared_window.tscn" type="PackedScene" id=14]
[ext_resource path="res://reset_exit_window.tscn" type="PackedScene" id=15]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 235.078, 32.4715 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 228.276, 17.0035 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 233.619, 34.1846 )

[node name="Mundo3" type="Node2D"]
script = ExtResource( 1 )

[node name="background" type="Sprite" parent="."]
position = Vector2( 640, 360 )
texture = ExtResource( 2 )

[node name="cannon_cart" parent="." instance=ExtResource( 3 )]

[node name="pipe" parent="." instance=ExtResource( 4 )]

[node name="floor" parent="." instance=ExtResource( 5 )]

[node name="trash_trays" type="Node2D" parent="."]
editor/display_folded = true
script = ExtResource( 6 )

[node name="tray_1" type="StaticBody2D" parent="trash_trays"]
position = Vector2( 622, 382.11 )
scale = Vector2( 0.5, 0.5 )

[node name="tray_sprite" type="Sprite" parent="trash_trays/tray_1"]
texture = ExtResource( 7 )

[node name="tray_shape" type="CollisionShape2D" parent="trash_trays/tray_1"]
shape = SubResource( 1 )

[node name="tray_1_area" type="Area2D" parent="trash_trays/tray_1"]

[node name="area_shape" type="CollisionShape2D" parent="trash_trays/tray_1/tray_1_area"]
position = Vector2( 0, -54 )
shape = SubResource( 2 )

[node name="Label" type="Label" parent="trash_trays/tray_1"]
margin_left = -9.79254
margin_top = -23.1622
margin_right = 67.2075
margin_bottom = 23.8378
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "1"

[node name="tray_2" type="KinematicBody2D" parent="trash_trays"]
position = Vector2( 100, 235.52 )
scale = Vector2( 0.5, 0.5 )
script = ExtResource( 9 )
speed = 40
offset = 400

[node name="tray_sprite" type="Sprite" parent="trash_trays/tray_2"]
position = Vector2( 742.12, 539.16 )
texture = ExtResource( 7 )

[node name="tray_shape" type="CollisionShape2D" parent="trash_trays/tray_2"]
position = Vector2( 742.12, 539.16 )
shape = SubResource( 1 )

[node name="tray_2_area" type="Area2D" parent="trash_trays/tray_2"]
position = Vector2( 742.12, 539.16 )

[node name="area_shape" type="CollisionShape2D" parent="trash_trays/tray_2/tray_2_area"]
position = Vector2( 0, -54 )
shape = SubResource( 2 )

[node name="Label" type="Label" parent="trash_trays/tray_2"]
margin_left = 734.0
margin_top = 521.0
margin_right = 829.0
margin_bottom = 575.0
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "2"

[node name="tray_3" type="StaticBody2D" parent="trash_trays"]
position = Vector2( 1111.19, 230.55 )
scale = Vector2( 0.5, 0.5 )

[node name="tray_sprite" type="Sprite" parent="trash_trays/tray_3"]
texture = ExtResource( 7 )

[node name="tray_shape" type="CollisionShape2D" parent="trash_trays/tray_3"]
shape = SubResource( 1 )

[node name="tray_3_area" type="Area2D" parent="trash_trays/tray_3"]

[node name="area_shape" type="CollisionShape2D" parent="trash_trays/tray_3/tray_3_area"]
position = Vector2( 0, -54 )
shape = SubResource( 2 )

[node name="Label" type="Label" parent="trash_trays/tray_3"]
margin_left = -9.79254
margin_top = -23.1622
margin_right = 67.2075
margin_bottom = 23.8378
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "3"

[node name="Timer" type="Timer" parent="trash_trays"]
wait_time = 3.0
one_shot = true

[node name="obstacle" type="StaticBody2D" parent="."]
editor/display_folded = true
position = Vector2( 1021.81, 56.75 )
rotation = 2.32689
scale = Vector2( 1, 0.5 )

[node name="obstacle_sprite" type="Sprite" parent="obstacle"]
texture = ExtResource( 10 )

[node name="obstacle_shape" type="CollisionShape2D" parent="obstacle"]
shape = SubResource( 3 )

[node name="speech_bubble" type="Sprite" parent="."]
editor/display_folded = true
position = Vector2( 1017.03, 440.64 )
texture = ExtResource( 11 )
script = ExtResource( 12 )

[node name="Label" type="Label" parent="speech_bubble"]
margin_left = -243.0
margin_top = -85.0
margin_right = 211.0
margin_bottom = 90.0
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Objetivo: Coloca 2 piezas org√°nicas
en la bandeja 1 y 2 piezas inorgani_
cas en las bandejas 2 y 3."

[node name="Timer" type="Timer" parent="speech_bubble"]
wait_time = 5.0
one_shot = true
autostart = true

[node name="MouseSpawner" parent="." instance=ExtResource( 13 )]
visible = false

[node name="level_cleared_window" parent="." instance=ExtResource( 14 )]
pause_mode = 2
visible = false

[node name="reset_exit_window" parent="." instance=ExtResource( 15 )]
pause_mode = 2
visible = false
margin_left = 537.06
margin_top = 305.91
margin_right = 537.06
margin_bottom = 305.91
[connection signal="body_entered" from="trash_trays/tray_1/tray_1_area" to="trash_trays" method="_on_tray_1_area_body_entered"]
[connection signal="body_exited" from="trash_trays/tray_1/tray_1_area" to="trash_trays" method="_on_tray_1_area_body_exited"]
[connection signal="body_entered" from="trash_trays/tray_2/tray_2_area" to="trash_trays" method="_on_tray_2_area_body_entered"]
[connection signal="body_exited" from="trash_trays/tray_2/tray_2_area" to="trash_trays" method="_on_tray_2_area_body_exited"]
[connection signal="body_entered" from="trash_trays/tray_3/tray_3_area" to="trash_trays" method="_on_tray_3_area_body_entered"]
[connection signal="body_exited" from="trash_trays/tray_3/tray_3_area" to="trash_trays" method="_on_tray_3_area_body_exited"]
[connection signal="timeout" from="trash_trays/Timer" to="trash_trays" method="_on_Timer_timeout"]
[connection signal="timeout" from="speech_bubble/Timer" to="speech_bubble" method="_on_Timer_timeout"]
